# building-llm-applications

./: create-devcontainers-root.sh  main.py  pyproject.toml
.devcontainer/: setup.sh
.devcontainer/ch01/: devcontainer.json  on-create.sh  post-create.sh  post-start.sh
.devcontainer/ch02/: devcontainer.json  post-create.sh  post-start.sh
.devcontainer/ch04/: devcontainer.json  post-create.sh  post-start.sh
.devcontainer/ch05/: devcontainer.json  post-create.sh  post-start.sh
.devcontainer/ch06/: devcontainer.json  post-create.sh  post-start.sh  setup.sh
ch04/: pyproject.toml  requirements.txt
ch04/.devcontainer/: devcontainer.json
