[project]
name = "ch04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ddgs==9.5.5",
    "duckduckgo-search==7.5.0",
    "langchain==1.0.3",
    "langchain-community==0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai==1.0.1",
    "requests==2.32.5",
]
